--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.1",
     "twilio": "^3.39.3",
+    "twilio-cli": "^1.11.0",
     "twilio-video": "^2.3.0",
     "typescript": "^3.7.5"
   },
