--- a/package.json
+++ b/package.json
@@ -4,57 +4,59 @@
   "private": true,
   "license": "Apache-2.0",
   "dependencies": {
-    "@material-ui/core": "^4.9.1",
+    "@juggle/resize-observer": "^3.1.3",
+    "@material-ui/core": "^4.9.12",
     "@material-ui/icons": "^4.9.1",
-    "@primer/octicons-react": "^9.4.0",
+    "@primer/octicons-react": "^9.6.0",
     "@types/d3-timer": "^1.0.9",
     "@types/fscreen": "^1.0.1",
     "@types/jest": "^24.9.1",
     "@types/lodash.throttle": "^4.1.6",
-    "@types/node": "^12.12.26",
-    "@types/react": "^16.9.19",
-    "@types/react-dom": "^16.9.5",
-    "@types/react-router-dom": "^5.1.3",
-    "@types/twilio-video": "^2.0.10",
-    "concurrently": "^5.1.0",
+    "@types/node": "^12.12.37",
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.7",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/twilio-video": "^2.0.12",
+    "concurrently": "^5.2.0",
     "cross-env": "^7.0.2",
     "d3-timer": "^1.0.10",
     "express": "^4.17.1",
-    "firebase": "^7.8.0",
+    "firebase": "^7.14.2",
     "fscreen": "^1.0.2",
     "husky": "^3.1.0",
     "lint-staged": "^9.5.0",
     "lodash.throttle": "^4.1.1",
     "prettier": "^1.19.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
     "strip-color": "^0.1.0",
+    "three": "^0.115.0",
     "twilio": "^3.39.3",
     "twilio-video": "^2.7.0",
     "typescript": "^3.8.3"
   },
   "devDependencies": {
-    "mocha": "^6.2.2",
-    "react-test-renderer": "^16.12.0",
-    "start-server-and-test": "^1.10.8",
-    "ts-jest": "^24.3.0",
-    "puppeteer": "^2.1.1",
-    "mocha-junit-reporter": "^1.23.3",
-    "pixelmatch": "^5.1.0",
-    "isomorphic-fetch": "^2.2.1",
-    "jest-junit": "^9.0.0",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/react-hooks": "^3.2.1",
+    "@types/enzyme": "^3.10.5",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "cypress": "^3.8.3",
-    "cypress-multi-reporters": "^1.2.3",
+    "cypress-multi-reporters": "^1.2.4",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.4.4",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
-    "@testing-library/react-hooks": "^3.2.1",
-    "@types/enzyme": "^3.10.4",
-    "@types/enzyme-adapter-react-16": "^1.0.5"
+    "isomorphic-fetch": "^2.2.1",
+    "jest-junit": "^9.0.0",
+    "mocha": "^6.2.3",
+    "mocha-junit-reporter": "^1.23.3",
+    "pixelmatch": "^5.2.0",
+    "puppeteer": "^2.1.1",
+    "react-test-renderer": "^16.13.1",
+    "start-server-and-test": "^1.11.0",
+    "ts-jest": "^24.3.0"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
