--- a/package.json
+++ b/package.json
@@ -4,50 +4,53 @@
   "private": true,
   "license": "Apache-2.0",
   "dependencies": {
-    "@juggle/resize-observer": "^3.1.3",
-    "@material-ui/core": "^4.9.12",
+    "@juggle/resize-observer": "^3.2.0",
+    "@material-ui/core": "^4.10.1",
     "@material-ui/icons": "^4.9.1",
     "@primer/octicons-react": "^9.6.0",
     "@types/d3-timer": "^1.0.9",
     "@types/fscreen": "^1.0.1",
     "@types/jest": "^24.9.1",
     "@types/lodash.throttle": "^4.1.6",
-    "@types/node": "^12.12.37",
-    "@types/react": "^16.9.34",
-    "@types/react-dom": "^16.9.7",
+    "@types/node": "^12.12.43",
+    "@types/randomcolor": "^0.5.5",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
     "@types/twilio-video": "^2.0.12",
     "concurrently": "^5.2.0",
     "cross-env": "^7.0.2",
     "d3-timer": "^1.0.10",
     "express": "^4.17.1",
-    "firebase": "^7.14.2",
+    "firebase": "^7.14.6",
     "fscreen": "^1.0.2",
     "husky": "^3.1.0",
     "lint-staged": "^9.5.0",
     "lodash.throttle": "^4.1.1",
     "prettier": "^1.19.1",
+    "randomcolor": "^0.5.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
     "strip-color": "^0.1.0",
     "three": "^0.115.0",
-    "twilio": "^3.39.3",
+    "twilio": "^3.44.0",
     "twilio-video": "^2.7.0",
-    "typescript": "^3.8.3"
+    "typescript": "^3.9.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/react-hooks": "^3.2.1",
+    "@types/chrome": "0.0.114",
     "@types/enzyme": "^3.10.5",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "cypress": "^3.8.3",
-    "cypress-multi-reporters": "^1.2.4",
+    "cypress-multi-reporters": "^1.4.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
-    "enzyme-to-json": "^3.4.4",
+    "enzyme-to-json": "^3.5.0",
     "isomorphic-fetch": "^2.2.1",
     "jest-junit": "^9.0.0",
     "mocha": "^6.2.3",
